<resources>
    <string name="app_name">Car wash</string>
    <string name="google_maps_key">AIzaSyC_oBci1lxwhE4xClIa4-dXbqc1bRSoKTM</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_join">Sign up to join</string>
    <string name="have_an_account">Have an account?</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="re_password">Re-password</string>
    <string name="identity_card">Identity card</string>
    <string name="phone">Phone</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="error_empty_name">Please enter name</string>
    <string name="error_empty_username">Please enter username</string>
    <string name="error_empty_password">Please enter password</string>
    <string name="error_empty_old_password">Please enter old password</string>
    <string name="error_empty_new_password">Please enter new password</string>
    <string name="error_empty_re_password">Please enter re-password</string>
    <string name="error_empty_identity_card">Please enter identity card</string>
    <string name="error_empty_phone">Please enter phone</string>
    <string name="error_empty_otp">Please enter OTP</string>
    <string name="error_least_length">Please enter at least %1$d characters</string>
    <string name="error_equal_length">Please enter a total of %1$d characters</string>
    <string name="error_matched">Please enter the password to match</string>
    <string name="error_identity_card">Please enter the correct Identity card</string>
    <string name="error_phone">Please enter the correct phone number</string>
    <string name="wallet">Wallet</string>
    <string name="history">History</string>
    <string name="change_profile">Change profile</string>
    <string name="change_password">Change password</string>
    <string name="contact_admin">Contact admin</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="date_time">Date time</string>
    <string name="price">Price</string>
    <string name="vehicle_registration">Vehicle registration</string>
    <string name="location">Location</string>
    <string name="balance">Balance</string>
    <string name="amount">Amount</string>
    <string name="date_example">25/03/2020</string>
    <string name="time">14:39</string>
    <string name="baht">+฿ 200.00</string>
    <string name="upload_image">Upload image</string>
    <string name="service">Service</string>
    <string name="do_you_really_want_to_log_out">Do you really want to log out?</string>
    <string name="contact_admin_tel">0834254372</string>
    <string name="unknown">Unknown</string>
    <string name="fifteen">15</string>
    <string name="payment">Payment</string>
    <string name="not_available">Not available at this time</string>
    <string name="google_maps_navigation">http://maps.google.com/maps?saddr=%1$f,%2$f&amp;daddr=%3$f,%4$f</string>
    <string name="report">Report</string>
    <string name="error">Error</string>
    <string name="enter_phone">Please enter phone number</string>
    <string name="request_otp">Request OTP</string>
    <string name="please_enter_otp_from_message">Please enter OTP from message</string>
    <string name="otp">OTP</string>
    <string name="or">or</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="re_send">Re-send</string>
    <string name="ratings">Ratings</string>
    <string name="tv_example_ratings">5.00</string>
    <string name="acceptance">Acceptance</string>
    <string name="cancellation">Cancellation</string>
    <string name="tv_example_percent">100.0%</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="please_check_message_phone_number">Please check the message from phone number %1$s</string>
    <string name="please_re_send_message">Please re-send message</string>
    <string name="validate_phone">Validate phone</string>
    <string name="please_select_profile_picture">Please select a profile picture</string>
    <string name="please_contact_car_wash">Please contact the Car Wash for training, Thank you.</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="comment">Comment</string>
    <string name="lorem">เนื้อหาจำลองแบบเรียบๆ ที่ใช้กันในธุรกิจ
                        งานพิมพ์หรืองานเรียงพิมพ์ มันได้กลาย
                        มาเป็นเนื้อหาจำลองมาตรฐานของธุรกิจ
                        ดังกล่าวมาตั้งแต่ศตวรรษที่ 16 เมื่อ
                        เครื่องพิมพ์โนเนมเครื่องหนึ่งนำรางตัว
                        พิมพ์มาสลับสับตำแหน่งตัวอักษรเพื่อทำ
                        หนังสือตัวอย่าง Lorem Ipsum อยู่ยง
                        คงกระพันมาไม่ใช่แค่เพียงห้าศตวรรษ
                        แต่อยู่มาจนถึงยุคที่พลิกโฉมเข้าสู่งาน
                        เรียงพิมพ์ด้วยวิธีทางอิเล็กทรอนิกส์
                        และยังคงสภาพเดิมไว้อย่างไม่มีการ
                        เปลี่ยนแปลง มันได้รับความนิยมมากขึ้น
                        ในยุค ค.ศ. 1960 เมื่อแผ่น Letraset
                        วางจำหน่ายโดยมีข้อความบนนั้นเป็น
                        Lorem Ipsum และล่าสุดกว่านั้น คือเมื่อ
                        ซอฟท์แวร์การทำสื่อสิ่งพิมพ์ (Desktop
                        Publishing) อย่าง Aldus PageMaker
                        ได้รวมเอา Lorem Ipsum เวอร์ชั่นต่างๆ
                        เข้าไว้ในซอฟท์แวร์ด้วยYes</string>
    <string name="other_image">Other image</string>
    <string name="photo_service_from_all_4_sides">Photo service from all 4 sides</string>
    <string name="other_related_images">Other related images</string>
    <string name="please_contact_the_system_administrator_in_an_emergency">Please contact the system administrator in an emergency</string>
    <string name="error_empty_report">Please enter report</string>
    <string name="error_empty_image">Please upload a 4-sided image service</string>
    <string name="error_maximum_other_image">The most relevant images have been uploaded</string>
    <string name="delete_image_service">Delete image service</string>
    <string name="delete_image_service_questions">Do you want to delete the photo service?</string>
    <string name="contact_customer">Contact customer</string>
    <string name="navigation">Navigation</string>
    <string name="maximum_5_images">*Maximum 5 images</string>
    <string name="arrive">Arrive</string>
    <string name="call">Call</string>
    <string name="service_info">Service info</string>
    <string name="distance">Distance</string>
    <string name="after_service">After service</string>
    <string name="before_service">Before service</string>
    <string name="other_images">Other images</string>
    <string name="contact_admin_message">Do you want to contact the admin?</string>
    <string name="you_don_t_have_any_work_history_this_month">You don\'t have\nany work history this month</string>
    <string name="finish_affinity">Press back again to exit</string>

</resources>
