<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RelativeLayout">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        style="@style/MatchWrap">

        <androidx.appcompat.widget.Toolbar
            style="@style/MatchWrap"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/iv_arrow_back"
            style="@style/ImageViewArrowBack" />

        <ImageView
            style="@style/ImageViewToolbar"
            android:src="@drawable/ic_verify_phone" />

    </RelativeLayout>

    <LinearLayout
        style="@style/MatchWrap"
        android:layout_below="@+id/layout_toolbar"
        android:layout_marginTop="@dimen/base_pow_four"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewMediumGray"
            android:text="@string/please_enter_otp_from_message" />

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

            <EditText
                android:id="@+id/et_otp"
                style="@style/MatchMatch"
                android:background="@drawable/shape_et"
                android:drawableStart="@drawable/ic_mail"
                android:hint="@string/otp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextViewMediumGray"
            android:layout_marginTop="@dimen/base_pow_four"
            android:text="@string/or" />

        <Button
            android:id="@+id/bt_re_send"
            style="@style/ButtonWhiteShort"
            android:layout_width="@dimen/bt_long_width"
            android:layout_marginTop="@dimen/base_pow_four"
            android:background="@drawable/shape_bt_white"
            android:text="@string/re_send" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_verify_phone"
        style="@style/ButtonBlueLong"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/base_pow_five"
        android:background="@drawable/shape_bt_blue"
        android:text="@string/verify_phone" />

</RelativeLayout>
