<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RelativeLayout">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        style="@style/MatchWrap">

        <androidx.appcompat.widget.Toolbar
            style="@style/MatchWrap"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/iv_arrow_back"
            style="@style/ImageViewArrowBack" />

        <ImageView
            style="@style/ImageViewToolbar"
            android:src="@drawable/ic_add_wallet" />

    </RelativeLayout>

    <LinearLayout
        style="@style/LinearLayoutVertical"
        android:layout_below="@+id/layout_toolbar">

        <LinearLayout style="@style/MatchWrap">

            <ImageView
                android:layout_width="@dimen/ic_base"
                android:layout_height="@dimen/ic_base"
                android:src="@drawable/ic_person_gray" />

            <TextView
                style="@style/TextViewMediumBlack"
                android:layout_marginStart="@dimen/base_pow_three"
                android:text="@string/full_name" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

            <EditText
                style="@style/MatchMatch"
                android:background="@drawable/shape_et"
                android:drawableStart="@drawable/ic_baht"
                android:hint="@string/amount"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/ButtonWhiteShort"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/base_pow_three"
            android:background="@drawable/shape_bt_white"
            android:text="@string/upload_image" />

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutButtonPair">

        <Button
            style="@style/ButtonWhiteShort"
            android:background="@drawable/shape_bt_white"
            android:text="@string/cancel" />

        <Button
            style="@style/ButtonBlueShort"
            android:layout_marginStart="@dimen/base_pow_three"
            android:background="@drawable/shape_bt_blue"
            android:text="@string/confirm" />

    </LinearLayout>

</RelativeLayout>
