<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchMatch"
    android:fillViewport="true">

    <RelativeLayout style="@style/WrapWrap">

        <LinearLayout
            style="@style/RelativeLayout"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout style="@style/MatchWrap">

                <androidx.appcompat.widget.Toolbar style="@style/Toolbar" />

                <ImageView
                    android:id="@+id/iv_arrow_back"
                    style="@style/ImageViewArrowBack" />

                <ImageView
                    style="@style/ImageViewToolbar"
                    android:src="@drawable/ic_sign_up" />

            </RelativeLayout>

            <LinearLayout style="@style/LinearLayoutVertical">

                <RelativeLayout style="@style/WrapWrap">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card"
                        style="@style/CardViewImageView">

                        <ImageView
                            android:id="@+id/iv_photo"
                            style="@style/ImageViewPhoto" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/WrapWrap"
                        android:layout_alignEnd="@+id/card"
                        android:layout_alignBottom="@+id/card"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="@dimen/base_pow_three">

                        <ImageView
                            android:id="@+id/iv_camera"
                            style="@style/ImageViewCamera" />

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <TextView
                    style="@style/TextViewMediumGray"
                    android:layout_gravity="start"
                    android:text="@string/sign_up_to_join" />

                <EditText
                    android:id="@+id/et_username"
                    style="@style/EditText"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                    android:drawableStart="@drawable/ic_account_gray"
                    android:hint="@string/username" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/EditTextPassword" />

                <EditText
                    android:id="@+id/et_re_password"
                    style="@style/EditTextPassword"
                    android:hint="@string/re_password" />

                <EditText
                    android:id="@+id/et_full_name"
                    style="@style/EditText"
                    android:drawableStart="@drawable/ic_person_gray"
                    android:hint="@string/full_name" />

                <EditText
                    android:id="@+id/et_identity_card"
                    style="@style/EditText"
                    android:drawableStart="@drawable/ic_identity_card"
                    android:hint="@string/identity_card"
                    android:inputType="number"
                    android:maxLength="13" />

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/EditTextPhoneNumber"
                    android:enabled="false" />

                <androidx.cardview.widget.CardView style="@style/CardViewButton">

                    <Button
                        android:id="@+id/bt_sign_up"
                        style="@style/ButtonBlueLong"
                        android:text="@string/sign_up" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                style="@style/WrapWrap"
                android:layout_marginTop="@dimen/base_pow_five"
                android:layout_marginBottom="@dimen/base_pow_five"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewMediumGray"
                    android:text="@string/have_an_account" />

                <TextView
                    android:id="@+id/tv_sign_in"
                    style="@style/TextViewMediumBlack"
                    android:layout_marginStart="@dimen/base_pow_two"
                    android:text="@string/sign_in" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/ProgressBar" />

    </RelativeLayout>

</ScrollView>
