<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    style="@style/MatchMatch"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:paddingBottom="@dimen/base_hundred">

    <LinearLayout
        style="@style/MatchWrap"
        android:orientation="vertical">

        <RelativeLayout style="@style/MatchWrap">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar" />

            <ImageView
                android:id="@+id/iv_arrow_back"
                style="@style/ImageViewArrowBack" />

            <ImageView
                style="@style/ImageViewToolbar"
                android:src="@drawable/ic_history_detail" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView style="@style/StyleCardView">

            <RelativeLayout style="@style/MatchWrap">

                <GridLayout
                    style="@style/WrapWrap"
                    android:columnCount="2"
                    android:rowCount="6">

                    <ImageView
                        style="@style/ImageViewIcon"
                        android:layout_marginTop="@dimen/base_zero"
                        android:src="@drawable/ic_person_gray" />

                    <TextView
                        android:id="@+id/tv_full_name"
                        style="@style/TextViewLargeApplicationSub"
                        android:layout_marginTop="@dimen/base_zero"
                        android:text="@string/full_name" />

                    <ImageView
                        style="@style/ImageViewIcon"
                        android:src="@drawable/ic_list_job_gray" />

                    <TextView
                        android:id="@+id/tv_service"
                        style="@style/TextViewLargeApplicationSub"
                        android:text="@string/service" />

                    <ImageView
                        style="@style/ImageViewIcon"
                        android:src="@drawable/ic_location_gray" />

                    <TextView
                        android:id="@+id/tv_location"
                        style="@style/TextViewLargeApplicationSub"
                        android:text="@string/location" />

                    <ImageView
                        style="@style/ImageViewIcon"
                        android:src="@drawable/ic_car_gray" />

                    <TextView
                        android:id="@+id/tv_vehicle_registration"
                        style="@style/TextViewLargeApplicationSub"
                        android:text="@string/vehicle_registration" />

                    <ImageView
                        style="@style/ImageViewIcon"
                        android:src="@drawable/ic_baht" />

                    <TextView
                        android:id="@+id/tv_price"
                        style="@style/TextViewLargeApplicationSub"
                        android:text="@string/price" />

                    <ImageView
                        style="@style/ImageViewIcon"
                        android:src="@drawable/ic_time_gray" />

                    <TextView
                        android:id="@+id/tv_date_time"
                        style="@style/TextViewLargeApplicationSub"
                        android:text="@string/date_time" />

                </GridLayout>

                <androidx.cardview.widget.CardView
                    style="@style/CardViewImageView"
                    android:layout_alignParentEnd="true"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/iv_photo"
                        style="@style/ImageViewPhotoSub" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_before_image"
            style="@style/StyleCardView"
            app:contentPadding="@dimen/base_zero">

            <TextView
                style="@style/TextViewLargeApplication"
                android:layout_marginTop="@dimen/base_pow_two"
                android:text="@string/before_service" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_before_service"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:layout_marginTop="@dimen/base_forty"
                tools:itemCount="4"
                tools:listitem="@layout/item_image_history_detail" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_after_image"
            style="@style/StyleCardView"
            app:contentPadding="@dimen/base_zero">

            <TextView
                style="@style/TextViewLargeApplication"
                android:layout_marginTop="@dimen/base_pow_two"
                android:text="@string/after_service" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_after_service"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:layout_marginTop="@dimen/base_forty"
                tools:itemCount="4"
                tools:listitem="@layout/item_image_history_detail" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_other_image"
            style="@style/StyleCardView"
            app:contentPadding="@dimen/base_zero">

            <TextView
                style="@style/TextViewLargeApplication"
                android:layout_marginTop="@dimen/base_pow_two"
                android:text="@string/other_image" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_other_image"
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/base_forty"
                tools:itemCount="3"
                tools:listitem="@layout/item_image_history_detail" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/StyleCardView"
            android:layout_marginBottom="@dimen/base_pow_four">

            <TextView
                style="@style/TextViewLargeApplication"
                android:layout_gravity="start"
                android:text="@string/comment" />

            <TextView
                android:id="@+id/tv_comment"
                style="@style/TextViewMediumGray"
                android:layout_marginTop="@dimen/base_pow_five"
                tools:text="@string/lorem" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
