<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        style="@style/MatchWrap">

        <androidx.appcompat.widget.Toolbar
            style="@style/MatchWrap"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/iv_arrow_back"
            style="@style/ImageViewArrowBack" />

        <ImageView
            style="@style/ImageViewToolbar"
            android:src="@drawable/ic_change_password" />

    </RelativeLayout>

    <LinearLayout
        style="@style/WrapWrap"
        android:layout_below="@+id/layout_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_pow_four"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

            <EditText
                style="@style/MatchMatch"
                android:background="@drawable/shape_et"
                android:drawableStart="@drawable/ic_key_gray"
                android:hint="@string/old_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

            <EditText
                style="@style/MatchMatch"
                android:background="@drawable/shape_et"
                android:drawableStart="@drawable/ic_key_gray_new"
                android:hint="@string/new_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

            <EditText
                style="@style/MatchMatch"
                android:background="@drawable/shape_et"
                android:drawableStart="@drawable/ic_key_gray_new"
                android:hint="@string/re_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutButtonPair">

        <Button
            style="@style/ButtonWhiteShort"
            android:background="@drawable/shape_bt_white"
            android:text="@string/cancel" />

        <Button
            style="@style/ButtonBlueShort"
            android:layout_marginStart="@dimen/base_pow_three"
            android:background="@drawable/shape_bt_blue"
            android:text="@string/confirm" />

    </LinearLayout>

</RelativeLayout>