<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/RelativeLayout">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        style="@style/MatchWrap">

        <androidx.appcompat.widget.Toolbar
            style="@style/MatchWrap"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/iv_arrow_back"
            style="@style/ImageViewArrowBack" />

        <ImageView
            style="@style/ImageViewToolbar"
            android:src="@drawable/ic_payment" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        style="@style/StyleCardView"
        android:layout_below="@id/layout_toolbar"
        app:cardCornerRadius="@dimen/base_pow_three"
        app:cardElevation="@dimen/base_pow_four"
        app:contentPadding="@dimen/base_pow_four">

        <GridLayout
            style="@style/MatchWrap"
            android:columnCount="2"
            android:rowCount="5">

            <TextView
                style="@style/TextViewMediumBlack"
                android:text="@string/tax_invoice" />

            <TextView
                style="@style/TextViewMediumBlack"
                android:layout_gravity="end"
                android:text="@string/tax_invoice" />

            <TextView
                style="@style/TextViewMediumBlack"
                android:text="@string/date_time" />

            <TextView
                style="@style/TextViewMediumBlack"
                android:layout_gravity="end"
                android:text="@string/date_time" />

            <TextView
                style="@style/TextViewMediumBlack"
                android:text="@string/name" />

            <TextView
                style="@style/TextViewMediumBlack"
                android:layout_gravity="end"
                android:text="@string/name" />

            <TextView
                style="@style/TextViewMediumBlack"
                android:text="@string/service" />

            <TextView
                style="@style/TextViewMediumBlack"
                android:layout_gravity="end"
                android:text="@string/service" />

            <TextView
                style="@style/TextViewMediumBlack"
                android:text="@string/amount" />

            <TextView
                style="@style/TextViewMediumBlack"
                android:layout_gravity="end"
                android:text="@string/amount" />

        </GridLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout style="@style/LinearLayoutButtonPair">

        <Button
            style="@style/ButtonWhiteShort"
            android:background="@drawable/shape_bt_white"
            android:text="@string/cancel" />

        <Button
            style="@style/ButtonBlueShort"
            android:layout_marginStart="@dimen/base_pow_three"
            android:background="@drawable/shape_bt_blue"
            android:text="@string/confirm" />

    </LinearLayout>

</RelativeLayout>